# gr-clenabled

./: CMakeLists.txt  MANIFEST.md  README.md  clFilter_impl.h  clQuadratureDemod_impl.cc  clQuadratureDemod_impl.h
apps/: CMakeLists.txt
cmake/Modules/: FindOpenCL.cmake  FindclFFT.cmake  clenabledConfig.cmake
docs/: CMakeLists.txt  README.clenabled
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: fft_xcorr_opencl_uhd2_30MSPS.grc  freq_domain_xcorr_4rtl_opencl.grc  freq_domain_xcorr_4rtl_opencl_td.grc  freq_domain_xcorr_opencl.grc  kernel1to1_multiply_const_complex.cl  kernel1to1_multiply_const_float.cl  kernel1to1_sincos.cl  kernel2to1_multiply_complex.cl  xcorr_clxengine.grc  xcorr_fm_radio4_opencl.py  xcorr_test_max_rate_no_ui.grc  xcorr_test_max_rate_no_ui_opencl.py  xcorr_test_opencl.grc  xcorr_test_opencl.py  xcorr_test_opencl_4_signals.grc  xcorr_test_opencl_uhd.grc  xcorr_test_uhd.py
examples/test_flowgraphs/: OpenCL_Demo-FM-broadcast.grc  OpenCL_Test-ComplexConj.grc  OpenCL_Test-ComplexFilter-TapBased-Time.grc  OpenCL_Test-ComplexToArg.grc  OpenCL_Test-ComplexToMag.grc  OpenCL_Test-FFT-MultStreams.grc  OpenCL_Test-FFT-Rev.grc  OpenCL_Test-FFT.grc  OpenCL_Test-Filter-TapBased-Time.grc  OpenCL_Test-Filter-TapBased.grc  OpenCL_Test-Filter.grc  OpenCL_Test-MagPhaseToComplex.grc  OpenCL_Test-Mult-Add-Const.grc  OpenCL_Test-Mult-Add-Subtract.grc  OpenCL_Test-Mult-Log10.grc  OpenCL_Test-PolyphaseChannelizer.grc  OpenCL_Test-SNR-Helper.grc  OpenCL_Test-SigSource-float.grc  OpenCL_Test-SigSource.grc  OpenCL_Test-clkernel.grc
grc/: CMakeLists.txt  clenabled_clAdd.block.yml  clenabled_clAdd.xml  clenabled_clAddConst.block.yml  clenabled_clAddConst.xml  clenabled_clBandPassFilter.block.yml  clenabled_clBandPassFilter.xml  clenabled_clBandRejectFilter.block.yml  clenabled_clBandRejectFilter.xml  clenabled_clComplexConjugate.block.yml  clenabled_clComplexConjugate.xml  clenabled_clComplexFilter.block.yml  clenabled_clComplexFilter.xml  clenabled_clComplexToArg.block.yml  clenabled_clComplexToArg.xml  clenabled_clComplexToMag.block.yml  clenabled_clComplexToMag.xml  clenabled_clComplexToMagPhase.block.yml  clenabled_clComplexToMagPhase.xml  clenabled_clCostasLoop.block.yml  clenabled_clCostasLoop.xml  clenabled_clFFT.block.yml  clenabled_clFFT.xml  clenabled_clFIRTapFilter.block.yml  clenabled_clFIRTapFilter.xml  clenabled_clFilter.xml.autogen  clenabled_clHighPassFilter.block.yml  clenabled_clHighPassFilter.xml  clenabled_clKernel1To1.block.yml  clenabled_clKernel1To1.xml  clenabled_clKernel2To1.block.yml  clenabled_clKernel2To1.xml  clenabled_clLog.block.yml  clenabled_clLog.xml  clenabled_clLog10.block.yml  clenabled_clLog10.xml  clenabled_clLowPassFilter.block.yml  clenabled_clLowPassFilter.xml  clenabled_clMagPhaseToComplex.block.yml  clenabled_clMagPhaseToComplex.xml  (+23 more)
include/clenabled/: CMakeLists.txt  GRCLBase.h  api.h  clComplexFilter.h  clComplexToArg.h  clComplexToMag.h  clComplexToMagPhase.h  clCostasLoop.h  clFFT.h  clFilter.h  clKernel1To1.h  clKernel2To1.h  clLog.h  clMagPhaseToComplex.h  clMathConst.h  clMathOp.h  clPolyphaseChannelizer.h  clQuadratureDemod.h  clSNR.h  clSignalSource.h  clXCorrelate.h  clXEngine.h  clxcorrelate_fft_vcf.h
lib/: CMakeLists.txt  GRCLBase.cpp  GRCLBase.h  clComplexFilter_impl.cc  clComplexFilter_impl.h  clComplexToArg_impl.cc  clComplexToArg_impl.h  clComplexToMagPhase_impl.cc  clComplexToMagPhase_impl.h  clComplexToMag_impl.cc  clComplexToMag_impl.h  clCostasLoop_impl.cc  clCostasLoop_impl.h  clFFT_impl.cc  clFFT_impl.h  clFilter_impl.cc  clFilter_impl.cc.bak  clFilter_impl.h  clFilter_impl.h.bak  clKernel1To1_impl.cc  clKernel1To1_impl.h  clKernel2To1_impl.cc  clKernel2To1_impl.h  clLog_impl.cc  clLog_impl.h  clMagPhaseToComplex_impl.cc  clMagPhaseToComplex_impl.h  clMathConst_impl.cc  clMathConst_impl.h  clMathOpTypes.h  clMathOp_impl.cc  clMathOp_impl.h  clPolyphaseChannelizer_impl.cc  clPolyphaseChannelizer_impl.h  clQuadratureDemod_impl.cc  clQuadratureDemod_impl.h  clSNR_impl.cc  clSNR_impl.h  clSignalSource_impl.cc  clSignalSource_impl.h  (+61 more)
python/: CMakeLists.txt  __init__.py  qa_clComplexToArg.py  qa_clComplexToMag.py  qa_clComplexToMagPhase.py  qa_clCostasLoop.py  qa_clFFT.py  qa_clFilter.py  qa_clLog.py  qa_clMagPhaseToComplex.py  qa_clMathConst.py  qa_clMathOp.py  qa_clQuadratureDemod.py  qa_clSNR.py
python/bindings/: CMakeLists.txt  clComplexFilter_python.cc  clComplexToArg_python.cc  clComplexToMagPhase_python.cc  clComplexToMag_python.cc  clCostasLoop_python.cc  clFFT_python.cc  clFilter_python.cc  clKernel1To1_python.cc  clKernel2To1_python.cc  clLog_python.cc  clMagPhaseToComplex_python.cc  clMathConst_python.cc  clMathOp_python.cc  clPolyphaseChannelizer_python.cc  clQuadratureDemod_python.cc  clSNR_python.cc  clSignalSource_python.cc  clXCorrelate_python.cc  clXEngine_python.cc  clxcorrelate_fft_vcf_python.cc  failed_conversions.txt  python_bindings.cc
python/bindings/docstrings/: clComplexFilter_pydoc_template.h  clComplexToArg_pydoc_template.h  clComplexToMagPhase_pydoc_template.h  clComplexToMag_pydoc_template.h  clCostasLoop_pydoc_template.h  clFFT_pydoc_template.h  clFilter_pydoc_template.h  clKernel1To1_pydoc_template.h  clKernel2To1_pydoc_template.h  clLog_pydoc_template.h  clMagPhaseToComplex_pydoc_template.h  clMathConst_pydoc_template.h  clMathOp_pydoc_template.h  clPolyphaseChannelizer_pydoc_template.h  clQuadratureDemod_pydoc_template.h  clSNR_pydoc_template.h  clSignalSource_pydoc_template.h  clXCorrelate_pydoc_template.h  clXEngine_pydoc_template.h  clxcorrelate_fft_vcf_pydoc_template.h
setup_help/: Intel-OpenCL.txt  NVIDIA-OpenCL-On-Debian.txt  NVIDIA-OpenCL-On-Ubuntu.txt
swig/: CMakeLists.txt  clenabled_swig.i
